--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString":"mongodb+srv://api:1kycasZYKSUiZJwU@cluster0.wqqpt.mongodb.net/test?retryWrites=true&w=majority?connect=replicaSet",
+  "ConnectionString":"mongodb+srv://api:<Key>@cluster0.wqqpt.mongodb.net/test?retryWrites=true&w=majority?connect=replicaSet",
   "NomeBanco":"coronavirus"
 }
